<resources>
    <string name="app_name">Captain</string>
    <!-- sjt -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="name">我的名字</string>
    <string name="head">头像</string>
    <string name="demand">我的督促要求</string>
    <string name="supervise">我督促别人</string>
    <string name="version">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="add_demand">新建需求</string>
    <string name="et_title">给你的督促需求来个标题吧</string>
    <string name="et_content">告诉TA你的督促需求的详情，让TA来督促你</string>
    <string name="send">发送</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="choose_gender">选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="phone_num">手机号码</string>
    <string name="password">密码</string>
    <string name="fgt_psw">忘记密码</string>
    <string name="get_verify">获取验证码</string>
    <string name="demand_detail">需求详情</string>
    <string name="his_demand">TA的需求</string>
    <string name="his_content">需求描述</string>
    <string name="title_activity_add_demand">AddDemandActivity</string>
    <string name="to_supervise">我去督促他</string>
    <string name="demand_description">需求描述</string>
    <string name="supervise_others">我督促别人</string>
    <string name="modify_detail">编辑个人资料</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birth">出生日期</string>
    <string name="city">城市</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="approve">同意</string>
    <string name="they_petition">他们申请督促你哦</string>
    <string name="remind">到点了，去提醒TA</string>
    <string name="now">刚刚</string>
    <!-- sjt-->
</resources>
