<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_border_size_lllarge"
        android:background="#34495e">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_border_size_normal"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervise_others"
            android:textSize="@dimen/dimen_font_size_xlarge"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_border_size_normal"
            android:layout_toRightOf="@id/iv_back"
            android:textColor="#1BBC9B" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_border_size_small">

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimen_border_size_normal"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_border_size_lsmall"
            android:layout_toRightOf="@id/iv_head"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textSize="@dimen/dimen_font_size_large" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_border_size_normal"
            android:layout_centerVertical="true"
            android:src="@mipmap/arrow_right" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/iv_head"
            android:layout_marginTop="@dimen/dimen_border_size_normal"
            android:layout_marginLeft="@dimen/dimen_border_size_normal"
            android:layout_marginRight="@dimen/dimen_border_size_normal"
            android:background="#cccccc" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_border_size_normal"
        android:layout_marginRight="@dimen/dimen_border_size_normal"
        android:layout_marginTop="@dimen/dimen_border_size_normal">

        <TextView
            android:id="@+id/tv_demand_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dimen_font_size_large"
            android:text="@string/his_demand" />

        <TextView
            android:id="@+id/tv_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_demand_title"
            android:layout_marginTop="@dimen/dimen_border_size_small"
            android:textColor="#444444"
            android:text="@string/et_content" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/iv_head"
        android:layout_marginTop="@dimen/dimen_border_size_normal"
        android:layout_marginLeft="@dimen/dimen_border_size_normal"
        android:layout_marginRight="@dimen/dimen_border_size_normal"
        android:background="#cccccc" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_border_size_normal"
        android:layout_marginRight="@dimen/dimen_border_size_normal"
        android:layout_marginTop="@dimen/dimen_border_size_normal">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dimen_font_size_large"
            android:text="@string/demand_description" />

        <TextView
            android:id="@+id/tv_demand_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginTop="@dimen/dimen_border_size_small"
            android:textColor="#444444"
            android:text="@string/et_content" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/iv_head"
        android:layout_marginTop="@dimen/dimen_border_size_normal"
        android:layout_marginLeft="@dimen/dimen_border_size_normal"
        android:layout_marginRight="@dimen/dimen_border_size_normal"
        android:background="#cccccc" />
    <Button
        android:id="@+id/btn_remind"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_border_size_normal"
        android:layout_marginTop="@dimen/dimen_border_size_normal"
        android:layout_marginLeft="@dimen/dimen_border_size_normal"
        android:background="@drawable/button_shape"
        android:text="@string/remind"
        android:textColor="@android:color/white"/>
</LinearLayout>
